# ESTUFA_FINAMENTO

./: .gitignore  .mxproject  CMakeLists.txt  ESTUFA_FINAMENTO.ioc  README.md  STM32L486RGTX_RAM.ld  STM32L486RGTx_FLASH.ld
Core/: README.rd
Core/DHT/Inc/: DHT.h
Core/DHT/Src/: DHT.c
Core/Inc/: main.h  rtc.h  stm32l4xx_hal_conf.h  stm32l4xx_it.h  tim.h
Core/Menu/Inc/: menu.h
Core/Menu/Src/: menu.c
Core/Src/: gpio.c  i2c.c  main.c  rtc.c  stm32l4xx_hal_msp.c  stm32l4xx_it.c  syscalls.c  tim.c
Core/Ssd1306/Inc/: bitmaps.h  fonts.h  ssd1306.h
Core/Ssd1306/Src/: ssd1306.c
Core/Utilitis/Inc/: delays.h  temperatura.h
Core/Utilitis/Src/: delays.c  temperatura.c
cmake/: gcc-arm-none-eabi.cmake
cmake/stm32cubemx/: CMakeLists.txt
